--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "nanocyte-interval-fire-on-demand",
   "version": "1.0.0",
   "description": "Fire nanocyte intervals on demand",
-  "main": "index.js",
+  "main": "command.js",
   "scripts": {
+    "start": "node command.js",
     "test": "istanbul cover _mocha -- -R spec"
   },
   "repository": {
@@ -23,11 +24,20 @@
   "devDependencies": {
     "chai": "^3.3.0",
     "coffee-coverage": "^0.6.3",
-    "coffee-script": "^1.10.0",
     "istanbul": "^0.4.0",
     "mocha": "^2.3.3",
     "mocha-istanbul": "^0.2.0",
     "sinon": "^1.17.1",
     "sinon-chai": "^2.8.0"
+  },
+  "dependencies": {
+    "async": "^1.4.2",
+    "coffee-script": "^1.10.0",
+    "colors": "^1.1.2",
+    "commander": "^2.9.0",
+    "hiredis": "^0.4.1",
+    "meshblu-config": "^3.1.1",
+    "meshblu-http": "^3.5.5",
+    "redis": "^2.2.5"
   }
 }
