--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nanocyte-interval-fire-on-demand",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Fire nanocyte intervals on demand",
   "main": "command.js",
   "scripts": {
@@ -36,6 +36,7 @@
     "colors": "^1.1.2",
     "commander": "^2.9.0",
     "hiredis": "^0.4.1",
+    "lodash": "^3.10.1",
     "meshblu-config": "^3.1.1",
     "meshblu-http": "^3.5.5",
     "redis": "^2.2.5"
