--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nanocyte-interval-fire-on-demand",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Fire nanocyte intervals on demand",
   "main": "command.js",
   "scripts": {
@@ -35,6 +35,7 @@
     "coffee-script": "^1.10.0",
     "colors": "^1.1.2",
     "commander": "^2.9.0",
+    "debug": "^2.2.0",
     "hiredis": "^0.4.1",
     "lodash": "^3.10.1",
     "meshblu-config": "^3.1.1",
